<resources>
    <string name="app_name">UniVOTE</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="fullname">Full Name</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="logout">Log Out</string>
    <string name="resetpwd">Reset Password</string>
    <string name="profile">Profile</string>
    <string name="batch">Batch </string>
    <string name="activepolls">Active Polls</string>
    <string name="create">Create Candidate</string>
    <string name="vote">Vote</string>
    <string name="forgetpassword">Forget Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>