<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activepolls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:fontFamily="@font/baloo_bhai_2"
                android:text="@string/activepolls"
                android:textColor="@color/c1"
                android:textSize="30dp">

            </TextView>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">



            <Button
                android:id="@+id/create_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:visibility="gone"
                android:backgroundTint="@color/c1"
                android:text="@string/create" />

            <Button
                android:id="@+id/candidate_create_voting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textAllCaps="false"
                android:visibility="gone"
                android:backgroundTint="@color/c1"
                android:text="Start Voting" />

            <Button
                android:id="@+id/vote_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:backgroundTint="@color/c1"
                android:layout_margin="20dp"
                android:text="@string/vote" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>